--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
     background-color: #000;  
     color: #fff;       
-    text-align: center;             
+    text-align: center;   
+    margin-top: auto;          
 }
   
 .footer-content img {
