--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,1 +1,5 @@
-/* Styles liés à la mise en page du site (grilles, header, footer, etc.) */
+.layout {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
